--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "smart-sort",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"main": "src/index.js",
 	"description": "sort string in a smart way",
 	"license": "MIT",
@@ -14,7 +14,8 @@
 		"gulp-esperanto": "simongfxu/gulp-esperanto",
 		"gulp-jshint": "^1.9.4",
 		"gulp-rename": "^1.2.0",
-		"gulp-uglify": "^1.1.0"
+		"gulp-uglify": "^1.1.0",
+		"mocha": "~2.1"
 	},
 	"scripts": {
 		"test": "mocha --harmony"
