--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
 	"name": "smart-sort",
-	"version": "0.0.2",
-	"main": "src/index.js",
-	"description": "sort string in a smart way",
+	"version": "0.0.3",
+	"main": "dist/smart-sort.js",
+	"description": "sort Array in a natural way",
 	"license": "MIT",
 	"repository": "simongfxu/smart-sort",
 	"keywords": [
-		"sort"
+		"sort",
+		"natrual-sort",
+		"smart-sort"
 	],
 	"devDependencies": {
 		"gulp": "^3.8.8",
